# A2A_Protocol

./: README.md  pyproject.toml
01_hello_world/: README.md  client.py  pyproject.toml  raw_client.py  server.py
02_stateful_task_agent/: README.md  client.py  pyproject.toml  server.py
03_streaming_agent/: README.md  client.py  pyproject.toml  server.py
04_interactive_agent/: README.md  agent.py  client.py  pyproject.toml  server.py
05_image_generation/: README.md  agent.py  app.py  client.py  pyproject.toml  server.py
05_image_generation/.chainlit/: config.toml
05_image_generation/.chainlit/translations/: en-US.json
06_a2a_communication/: README.md  cli_app.py  einstein_server.py  main.py  newton_server.py  pyproject.toml  streamlit_app.py
06_a2a_communication/debaters/: agents_config.py  einstein_agent.py  langgraph_agent.py  newton_agent.py  openai_agent.py
06_a2a_communication/servers/: langgraph_agent_server.py  openai_agent_server.py
